adjusted front page to display news

--- a/_posts/news/2015-11-15-5GSummit.md
+++ b/_posts/news/2015-11-15-5GSummit.md
@@ -2,7 +2,7 @@
 layout: page
 subheadline: "Conference"
 title: "First International 5G Summit takes place in Princeton"
-teaser: "First International 5G Summit takes place in Princeton"
+teaser: "Took place in Princeton"
 categories:
     - news    
 comments: true
