fix gotcha in the form

--- a/_posts/papers/fogiot/2015-06-02-paper10.md
+++ b/_posts/papers/fogiot/2015-06-02-paper10.md
@@ -1,8 +1,8 @@
 ---
 layout: page
-subheadline: "Stauffer, Michael"
-title: "Connectivity solutions for smart TVs"
-teaser: "Consumer demand for enjoying any content anywhere, any time, and on any device is driving the need for reliable connectivity between content sources and consumption devices inside the home. A key content consumption device in the home is the TV. In this paper, we describe the connectivity challenges associated with Smart TVs to ensure a positive user experience and present some solutions that achieve these requirements. We also describe how the TV can incorporate the latest networking technologies to enable new types of user experiences."
+subheadline: "Zhang, Bo, et al"
+title: "LocalTree: An efficient algorithm for mobile peer-to-peer live streaming"
+teaser: "To provide live streaming service to mobile users, traditionally each user pulls content from a server over his cellular network. In order to overcome the scalability problem of last-hop bandwidth bottleneck, mobile peer-to-peer (P2P) streaming can be used where mobile devices relay their stream received in a multi-hop manner by means of a secondary channel (such as Wi-Fi or bluetooth). We investigate the design of distributed algorithm termed LocalTree, which minimizes the number of broadcasters while meeting a certain video quality requirement under peer churns. We first formulate the problem and show that it is NP-hard, and hence propose LocalTree which achieves robustness similar to an unstructured mesh and low delay similar to a global tree. Simulation results show that LocalTree outperforms other algorithms substantially in terms of number of broadcasters used (by as much as 50%)."
 categories:
     - researchpaper  
 tags:
