--- a/_posts/papers/fogiot/2015-06-02-paper4.md
+++ b/_posts/papers/fogiot/2015-06-02-paper4.md
@@ -1,7 +1,7 @@
 ---
 layout: page
-subheadline: "Flavio Bonomi, et al "
-title: "The Smart and Connected Vehicle and the Internet of Things"
+subheadline: "Hong, Kirak, et al"
+title: "Mobile fog: a programming model for large-scale applications on the internet of things"
 categories:
     - researchpaper  
 tags:
@@ -13,4 +13,4 @@ show_meta: false
 
 
 
-For more please follow the [link](http://tf.nist.gov/seminars/WSTS/PDFs/1-0_Cisco_FBonomi_ConnectedVehicles.pdf)
+For more please follow the [link](http://dl.acm.org/citation.cfm?id=2491270)
