--- a/_posts/news/2015-06-04-verizon.md
+++ b/_posts/news/2015-06-04-verizon.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 subheadline: "Report"
-title: "Verizon, in its State of the Market — The Internet of Things 2015 report"
+title: "Verizon releases The Internet of Things 2015 report"
 teaser: "The Internet of Things (IoT) refers to machine-to-machine (M2M) technology enabled by secure network connectivity and cloud infrastructure, to reliably transform data into useful information for people, businesses, and institutions."
 categories:
     - news        
