--- a/_posts/papers/fogiot/2015-09-23-paper16.md
+++ b/_posts/papers/fogiot/2015-09-23-paper16.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-subheadline: "This article is an editorial note submitted to CCR."
+subheadline: "Vaquero, Luis M., and Luis Rodero-Merino"
 title: "Finding your Way in the Fog: Towards a Comprehensive Definition of Fog Computing"
 teaser: "The cloud is migrating to the edge of the network, where routers themselves may become the virtualisation infrastruc- ture, in an evolution labelled as “the fog”. However, many other complementary technologies are reaching a high level of maturity. Their interplay may dramatically shift the in- formation and communication technology landscape in the following years, bringing separate technologies into a com- mon ground. This paper offers a comprehensive definition of the fog, comprehending technologies as diverse as cloud, sensor networks, peer-to-peer networks, network virtualisa- tion functions or configuration management techniques. We highlight the main challenges faced by this potentially break- through technology amalgamation."
 
