--- a/_posts/papers/fogiot/2015-09-23-paper16.md
+++ b/_posts/papers/fogiot/2015-09-23-paper16.md
@@ -6,6 +6,7 @@ teaser: "The cloud is migrating to the edge of the network, where routers themse
 
 categories:
     - researchpaper  
+    - news
 tags:
     - fogiot
       
