--- a/pages/404.md
+++ b/pages/404.md
@@ -5,12 +5,10 @@ subheadline: "404"
 teaser: "Maybe the webpage moved or we deleted it. Or did you maybe mistype the URL?"
 permalink: "/404.html"
 ---
-## No problem!
 
-Try...  
-...to start over on the [home page]({{ site.url }}).  
-...our **search**.
+# Looking for a paper?
 
+You might have been given an out-of-date link (possibly by Google Scholar). 
 
 ### Search and Find
 
@@ -19,3 +17,9 @@ Try...
 <form onsubmit="google_search()" >
   <input type="text" id="google-search" placeholder="Search">
 </form>
+
+Try to start over on the [home page]({{ site.url }}).  
+
+
+
+
